<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>test_wfs</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>test_wfs</name>
	<description>test_wfs</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>1.8</java.version>
		<geotools.version>28.4</geotools.version>
		<jts.version>1.20.0</jts.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>3.1.8</version>
		</dependency>





		<!-- GEO -->
		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>${jts.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-main</artifactId>
			<version>${geotools.version}</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.geotools.xsd</groupId>-->
<!--			<artifactId>gt-xsd-core</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools</groupId>-->
<!--			<artifactId>gt-wms</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools.xsd</groupId>-->
<!--			<artifactId>gt-xsd-wfs</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools</groupId>-->
<!--			<artifactId>gt-geojson</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools</groupId>-->
<!--			<artifactId>gt-app-schema-resolver</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools.xsd</groupId>-->
<!--			<artifactId>gt-xsd-sld</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools.xsd</groupId>-->
<!--			<artifactId>gt-xsd-gml2</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools.xsd</groupId>-->
<!--			<artifactId>gt-xsd-ows</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools</groupId>-->
<!--			<artifactId>gt-sample-data</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.geotools.schemas</groupId>
			<artifactId>wfs-2.0</artifactId>
			<version>2.0.0-1</version>
		</dependency>








		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-render</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-extension</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools.jdbc</groupId>
			<artifactId>gt-jdbc-postgis</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools.ogc</groupId>
			<artifactId>net.opengis.wfs</artifactId>
			<version>${geotools.version}</version>
			<!--version>1.1.0</version>
            <exclusions>
              <exclusion>
                <groupId>org.opengis</groupId>
                <artifactId>geoapi</artifactId>
              </exclusion>
              <exclusion>
                <groupId>org.geotools</groupId>
                <artifactId>gt2-api</artifactId>
              </exclusion>
            </exclusions-->
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-wfs-ng</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools.xsd</groupId>
			<artifactId>gt-xsd-fes</artifactId>
			<version>${geotools.version}</version>
		</dependency>



		<dependency>
			<groupId>org.geotools.xsd</groupId>
			<artifactId>gt-xsd-filter</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools.ogc</groupId>
			<artifactId>net.opengis.wfs</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-xml</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-gml-geometry-streaming</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools.xsd</groupId>
			<artifactId>gt-xsd-gml3</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-app-schema</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-sample-data</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools.xsd</groupId>
			<artifactId>gt-xsd-core</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-matchers</artifactId>
			<scope>test</scope>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.geotools</groupId>-->
<!--			<artifactId>gt-iau-wkt</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.geotools</groupId>-->
<!--			<artifactId>gt-api</artifactId>-->
<!--			<version>${geotools.version}</version>-->
<!--		</dependency>-->





		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>RELEASE</version>
			<scope>compile</scope>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>gis bis osgeo proxy</name>
			<url>https://repo.gisbis.org/repository/osgeo</url>
		</repository>
		<repository>
			<id>gisbis</id>
			<name>gis bis repo</name>
			<url>https://repo.gisbis.org/repository/maven-releases</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
